--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,4 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/run/ydt-mettings/1103/posters/12_1011_265399_1562724310195_478188.jpg
